[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Images/JoxHeadLogo.png" type="Texture" id=2]
[ext_resource path="res://Resources/Images/BackInactive.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/BackActive.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/Boxxy.png" type="Texture" id=5]
[ext_resource path="res://Resources/Fonts/REGISTER.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/MainScenes/Room.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.894118, 0.894118, 0.894118, 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[node name="RoomContainer" type="Node2D"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_left = -32.4126
margin_right = 1404.59
margin_bottom = 768.0
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Test" type="Button" parent="."]
margin_left = 232.135
margin_top = 116.089
margin_right = 393.138
margin_bottom = 136.089
text = "feafaefaefaefaefea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoRect" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 45.0
margin_right = 1042.0
margin_bottom = 152.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerLobby" type="Node2D" parent="."]

[node name="sp_BackButton" type="TextureButton" parent="SinglePlayerLobby"]
margin_left = 600.0
margin_top = 630.0
margin_right = 714.0
margin_bottom = 684.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="SinglePlayerLobby"]
margin_left = 464.456
margin_top = 239.227
margin_right = 864.456
margin_bottom = 488.227
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMapButton" type="TextureButton" parent="SinglePlayerLobby/BackgroundPanel"]
margin_left = 17.0
margin_top = 17.0
margin_right = 2067.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.18, 0.18 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SinglePlayerLobby"]
anchor_right = 1.0
margin_left = 557.731
margin_top = 206.362
margin_right = 681.731
margin_bottom = 225.362
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SinglePlayerLobby/VBoxContainer"]
margin_right = 124.0
margin_bottom = 19.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSTextLabel" type="Label" parent="SinglePlayerLobby/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Highscore:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSValueLabel" type="Label" parent="SinglePlayerLobby/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 124.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="SinglePlayerLobby"]
margin_left = 1039.0
margin_top = 230.416
margin_right = 1128.0
margin_bottom = 295.416
custom_fonts/font = SubResource( 4 )
text = "Room
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerContainer" type="HBoxContainer" parent="SinglePlayerLobby"]
margin_left = 944.832
margin_top = 273.562
margin_right = 1011.83
margin_bottom = 317.562
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userContainer" type="VBoxContainer" parent="SinglePlayerLobby/playerContainer"]
margin_right = 230.0
margin_bottom = 44.0
rect_min_size = Vector2( 230, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userOne" type="Label" parent="SinglePlayerLobby/playerContainer/userContainer"]
margin_right = 230.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )

[node name="userTwo" type="Label" parent="SinglePlayerLobby/playerContainer/userContainer"]
visible = false
margin_top = 24.0
margin_right = 230.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )

[node name="statusContainer" type="VBoxContainer" parent="SinglePlayerLobby/playerContainer"]
margin_left = 234.0
margin_right = 339.0
margin_bottom = 44.0
rect_min_size = Vector2( 105, 0 )

[node name="statusOne" type="Label" parent="SinglePlayerLobby/playerContainer/statusContainer"]
margin_right = 105.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Not Ready"

[node name="statusTwo" type="Label" parent="SinglePlayerLobby/playerContainer/statusContainer"]
visible = false
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
text = "Not Ready"

[node name="StartButton" type="Button" parent="SinglePlayerLobby"]
margin_left = 479.167
margin_top = 508.811
margin_right = 640.167
margin_bottom = 553.811
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="SinglePlayerLobby"]
margin_left = 691.06
margin_top = 508.811
margin_right = 852.06
margin_bottom = 553.811
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SinglePlayerLobby/ReadyButton" to="." method="_on_ReadyButton_pressed"]
